// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SendEmailForm render should render 1`] = `
<Dialog
  buttons={
    Object {
      "primary": Object {
        "name": "Confirm",
        "onClick": [Function],
      },
      "secondary": Object {
        "name": "Cancel",
        "onClick": [Function],
      },
    }
  }
  headerClass="send_email"
  title="Send email"
>
  <TypeList
    __className=""
    initialType={
      Object {
        "component": [Function],
        "description": "Send email",
        "form": [Function],
        "localization": [Function],
        "localizeableKeys": Array [
          "subject",
          "body",
        ],
        "name": "Send email",
        "type": "send_email",
        "visibility": Array [
          "messaging",
          "messaging_background",
          "voice",
        ],
      }
    }
    nodeSettings={
      Object {
        "originalAction": Object {
          "addresses": Array [
            "jane@example.com",
          ],
          "body": "@run.results.name just signed up.",
          "subject": "New Sign Up",
          "type": "send_email",
          "uuid": "b1f332f3-bdd3-4891-aec5-1843a712dbf1",
        },
        "originalNode": Object {
          "inboundConnections": Object {},
          "node": Object {
            "actions": Array [
              Object {
                "addresses": Array [
                  "jane@example.com",
                ],
                "body": "@run.results.name just signed up.",
                "subject": "New Sign Up",
                "type": "send_email",
                "uuid": "b1f332f3-bdd3-4891-aec5-1843a712dbf1",
              },
            ],
            "exits": Array [
              Object {
                "uuid": "1dce2b34-9aab-4e20-81c4-3f0408dcb671",
              },
            ],
            "uuid": "061fc171-8b79-4636-b892-bd0ea5aa9b42",
          },
          "ui": Object {
            "position": Object {
              "left": 0,
              "top": 0,
            },
            "type": "execute_actions",
          },
        },
      }
    }
    onChange={[MockFunction]}
  />
  <div
    className="ele"
  >
    <TextInputElement
      __className="subject"
      entry={
        Object {
          "value": "",
        }
      }
      iconRight="keyboard-return-1"
      name="Recipient"
      onChange={[Function]}
      onKeyDown={[Function]}
      onKeyPressEnter={[Function]}
      placeholder="Email"
      showLabel={true}
    />
    <div
      className="pills"
    >
      <div
        className="pill u font secondary body-md color-neutral-darkest"
        key="0"
      >
        jane@example.com
        <ForwardRef
          clickable={true}
          icon="close-1"
          onClick={[Function]}
          scheme="neutral-darkest"
          size="xs"
        />
      </div>
    </div>
    <div>
      <TextInputElement
        autocomplete={true}
        entry={
          Object {
            "value": "New Sign Up",
          }
        }
        name="Subject"
        onChange={[Function]}
        placeholder="Ex: Your order has been delivered"
        showLabel={true}
      />
    </div>
    <div>
      <TextInputElement
        autocomplete={true}
        entry={
          Object {
            "value": "@run.results.name just signed up.",
          }
        }
        name="E-mail text"
        onChange={[Function]}
        placeholder="Type here..."
        showLabel={true}
        textarea={true}
      />
    </div>
  </div>
</Dialog>
`;

exports[`SendEmailForm updates should allow switching from router 1`] = `
Array [
  Object {
    "addresses": Array [
      "joe@domain.com",
      "jane@domain.com",
    ],
    "body": "What is a group of tigers called?",
    "subject": "URGENT: I have a question",
    "type": "send_email",
    "uuid": "763e4844-3e1b-407a-a1b5-5fdfcd308b41",
  },
]
`;

exports[`SendEmailForm updates should save changes 1`] = `
Object {
  "body": Object {
    "validationFailures": Array [],
    "value": "What is a group of tigers called?",
  },
  "recipient": Object {
    "value": "",
  },
  "recipientError": undefined,
  "recipients": Object {
    "validationFailures": Array [],
    "value": Array [
      "joe@domain.com",
      "jane@domain.com",
    ],
  },
  "subject": Object {
    "validationFailures": Array [],
    "value": "URGENT: I have a question",
  },
  "valid": true,
}
`;

exports[`SendEmailForm updates should save changes 2`] = `
Array [
  Object {
    "addresses": Array [
      "joe@domain.com",
      "jane@domain.com",
    ],
    "body": "What is a group of tigers called?",
    "subject": "URGENT: I have a question",
    "type": "send_email",
    "uuid": "b1f332f3-bdd3-4891-aec5-1843a712dbf1",
  },
]
`;
